Fix layout issue for screens < 300px wide
Change RPS player selection images from 75px to 50px each.
75px was causing layout responsiveness issues in small screens.

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,16 @@ h1 {
     max-height: 75px;
 }
 
+@media screen and (max-width: 300px) {
+.rock img,
+.paper img,
+.scissors img {
+    margin: 0 auto;
+    max-width: 50px;
+    max-height: 50px;
+}
+}
+
 .game_info {
     margin-top: -10px;
 }
